--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -31,7 +31,7 @@
                   <td scope="col">{{data.department_name}}</td>
                   <td scope="col">{{data.department_name}}</td>
                   <td scope="col">
-                    <ion-button (click)="setOpen(true)" class="edit" color="tertiary" fill="clear" size="small">
+                    <ion-button (click)="setOpen(true)"  class="edit" color="tertiary" fill="clear" size="small">
                       <ion-icon name="eye-off-outline"></ion-icon>
                     </ion-button>
                     <!-- modal -->
@@ -49,48 +49,38 @@
                         <ion-content class="ion-padding">
                           <!-- create details table with inline items -->
                           <ion-grid class="modal-table">
-                            <ion-row class="table-header">
-                              <ion-col>Vehicle Number</ion-col>
-                              <ion-col>Vendor Name</ion-col>
-                              <ion-col>Bill No</ion-col>
-                              <ion-col>Date</ion-col>
-                              <ion-col>Total</ion-col>
-                            </ion-row>
-                            <ion-row>
-                              <ion-col>ABC123</ion-col>
-                              <ion-col>Vendor A</ion-col>
-                              <ion-col>12345</ion-col>
-                              <ion-col>2023-05-28</ion-col>
-                              <ion-col style="color: rgb(114, 10, 10);">$500</ion-col>
-                            </ion-row>
-                            <ion-row class="table-header">
-                              <ion-col>SL NO</ion-col>
-                              <ion-col>Product Name</ion-col>
-                              <ion-col>Quantity</ion-col>
-                              <ion-col>Cost</ion-col>
-                              <ion-col>Amount</ion-col>
-                            </ion-row>
-                            <ion-row>
-                              <ion-col>1</ion-col>
-                              <ion-col>Spare Part A</ion-col>
-                              <ion-col>2</ion-col>
-                              <ion-col>$50</ion-col>
-                              <ion-col>$100</ion-col>
-                            </ion-row>
-                            <ion-row>
-                              <ion-col>2</ion-col>
-                              <ion-col>Spare Part B</ion-col>
-                              <ion-col>3</ion-col>
-                              <ion-col>$20</ion-col>
-                              <ion-col>$60</ion-col>
-                            </ion-row>
-                            <ion-row>
-                              <ion-col>3</ion-col>
-                              <ion-col>Spare Part C</ion-col>
-                              <ion-col>1</ion-col>
-                              <ion-col>$80</ion-col>
-                              <ion-col>$80</ion-col>
-                            </ion-row>
+                            <ng-container>
+                              <ion-row class="table-header">
+                                <ion-col>Vehicle Number</ion-col>
+                                <ion-col>Vendor Name</ion-col>
+                                <ion-col>Bill No</ion-col>
+                                <ion-col>Date</ion-col>
+                                <ion-col>Total</ion-col>
+                              </ion-row>
+                              <ion-row>
+                                <ion-col>HHH</ion-col>
+                                <ion-col>Vendor A</ion-col>
+                                <ion-col>12345</ion-col>
+                                <ion-col>2023-05-28</ion-col>
+                                <ion-col style="color: rgb(114, 10, 10);">$500</ion-col>
+                              </ion-row>
+                              <ion-row class="table-header">
+                                <ion-col>SL NO</ion-col>
+                                <ion-col>Product Name</ion-col>
+                                <ion-col>Quantity</ion-col>
+                                <ion-col>Cost</ion-col>
+                                <ion-col>Amount</ion-col>
+                              </ion-row>
+                              <ion-row>
+                                <ion-col>1</ion-col>
+                                <ion-col>Spare Part A</ion-col>
+                                <ion-col>2</ion-col>
+                                <ion-col>$50</ion-col>
+                                <ion-col>$100</ion-col>
+                              </ion-row>
+                            </ng-container>
+                            
+                            
                           </ion-grid>
                           <ion-button color="primary" expand="block" (click)="setOpen(false)">Ok</ion-button>
                           <!-- end details here  -->
