--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -1,44 +1,41 @@
-<form (ngSubmit)="submitForm()">
+<form [formGroup]="myForm" (ngSubmit)="submitForm()">
   <div class="panel-group">
     <div class="panel panel-primary">
       <div class="panel-body">
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
             <label class="form-label required" for="name">Name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name"
-            [ngClass]="{'invalid': formSubmitted && !name}" required />
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
           </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
             <label for="department">Department</label>
-            <select class="form-control" [(ngModel)]="department" name="department">
+            <select class="form-control" formControlName="department">
               <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
             </select>
           </div>
-          <div class="form-group col-md-6">
-            <label for="IsExpenditure">Is Expenditure</label>
-            <select class="form-control" [(ngModel)]="isExpenditure" name="isExpenditure">
-              <option selected>Choose...</option>
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
+            <label for="isExpenditure">Is Expenditure</label>
+            <select class="form-control" formControlName="isExpenditure" required>
+              <option value="">Choose...</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
           </div>
           <div class="form-group col-md-6">
-            <label for="TotalBudget">Total Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget"
-              placeholder="Total Buget" />
+            <label for="totalBudget">Total Budget</label>
+            <input type="number" class="form-control" formControlName="totalBudget" placeholder="Total Budget" />
           </div>
           <div class="form-group col-md-4">
-            <label for="UtilizedBudget">Utilized Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget"
-              placeholder="Utilized Buget" />
+            <label for="utilizedBudget">Utilized Budget</label>
+            <input type="number" class="form-control" formControlName="utilizedBudget" placeholder="Utilized Budget" />
           </div>
           <div class="form-group col-md-4">
-            <label for="attachment">Attachement</label>
-            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" />
+            <label for="attachment">Attachment</label>
+            <input type="file" class="form-control" formControlName="attachment" />
           </div>
-          <div class="form-group col-md-4">
+          <div class="form-group col-md-4" >
             <label for="remarks">Remarks</label>
-            <textarea class="form-control" [(ngModel)]="remarks" name="remarks" rows="1"></textarea>
+            <textarea class="form-control" formControlName="remarks" rows="1" ></textarea>
           </div>
           <div class="panel-body">
             <table class="table table-bordered">
@@ -51,30 +48,25 @@
                   <th>Action</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr *ngFor="let row of rows; let i = index">
+              <tbody formArrayName="rows">
+                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i" [ngClass]="{'invalid': formSubmitted && row.invalid}">
                   <td>
-                    <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{
-                        option.ItemCategory
-                        }}</option>
+                    <select formControlName="category" class="form-control" [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{ option.ItemCategory }}</option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
-                      </option>
+                    <select formControlName="item" class="form-control">
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}</option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].costCenter" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                      </option>
+                    <select formControlName="costCenter" class="form-control">
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}</option>
                     </select>
                   </td>
                   <td>
-                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control"
-                      [ngModelOptions]="{standalone: true}">
+                    <input type="number" formControlName="quantity" class="form-control">
                   </td>
                   <td>
                     <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
