--- a/src/app/component/newhireform/newhireform.component.scss
+++ b/src/app/component/newhireform/newhireform.component.scss
@@ -9,3 +9,47 @@
 .invalid-inline {
   border: 1px solid red;
 }
+
+.invalid-inline input.form-control {
+  border-color: red;
+}
+
+// for mobile view only
+@media (max-width: 767px) {
+  .inline-table {
+    overflow-x: auto;
+  }
+  
+  .inline-table table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 0;
+    border-collapse: collapse;
+  }
+  
+  .inline-table table thead th {
+    white-space: nowrap;
+  }
+  
+  .inline-table {
+    width: 100%;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+    margin-bottom: 15px;
+  }
+
+  .inline-table table {
+    margin-bottom: 0;
+  }
+
+  .inline-table table thead th {
+    white-space: nowrap;
+  }
+}
+
+
+
+
+
