--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <ion-list>
 
         <ion-menu-toggle>
-          <ion-item routerLink="">
+          <ion-item routerLink="/home">
             <ion-icon name="home" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
@@ -59,7 +59,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item  (click)="logout()">
+          <ion-item (click)="logout()">
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
