--- a/src/app/pages/procurementview/procurementview.page.scss
+++ b/src/app/pages/procurementview/procurementview.page.scss
@@ -24,7 +24,7 @@ table th {
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #f5f5f5;
 }
 
 table th,
@@ -54,6 +54,10 @@ table td {
     padding: .5em;
   }
 
+  tbody tr:nth-child(even) {
+    background-color: #c9ebfd;
+  }
+
   table td {
     text-align: right;
     display: block;
@@ -65,11 +69,39 @@ table td {
     content: attr(data-title) ":";
     float: left;
     font-weight: bold;
-
-
   }
 
   table td:last-child {
     border-bottom: 0;
   }
 }
+// Modal Css
+.modal-table {
+  ion-row {
+    ion-col {
+      padding: 10px;
+      border-bottom: 1px solid #e0e0e0;
+      display: flex;
+      align-items: center;
+
+      &:first-child {
+        background-color: #f5f5f5;
+        font-weight: bold;
+      }
+
+      h2, p {
+        margin: 0;
+      }
+    }
+  }
+
+  ion-card-header{
+    background-color: #83b4c8;
+    font-weight: bold;
+  }
+
+}
+
+
+
+
