--- a/src/app/component/replacementform/replacementform.component.html
+++ b/src/app/component/replacementform/replacementform.component.html
@@ -1,89 +1,83 @@
-<form class="requires-validation" validate>
+<form [formGroup]="myForm" (ngSubmit)="presentAlert()">
   <div class="panel-group">
     <div class="panel panel-primary">
       <div class="panel-body">
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
             <label class="form-label required" for="name">Name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name"
-              required />
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
           </div>
-          <div class="form-group col-md-6">
-            <label class="form-label required" for="department">Department</label>
-            <select class="form-control" id="department" [(ngModel)]="department" name="department" required>
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
+            <label for="department">Department</label>
+            <select class="form-control" formControlName="department">
               <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
             </select>
           </div>
-          <div class="form-group col-md-6">
-            <label class="required" for="IsExpenditure">Is Expenditure</label>
-            <select class="form-control" [(ngModel)]="isExpenditure" name="isExpenditure" required>
-              <option selected>Choose...</option>
+          <div class="form-group col-md-6"
+            [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
+            <label for="isExpenditure">Is Expenditure</label>
+            <select class="form-control" formControlName="isExpenditure" name="isExpenditure" required>
+              <option value="">Choose...</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
           </div>
-          <div class="form-group col-md-6">
-            <label for="TotalBudget">Total Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget"
-              placeholder="Total Buget" />
+          <div *ngIf="myForm.get('isExpenditure')?.value === 'Yes'">
+            <div class="form-group col-md-6">
+              <label for="totalBudget">Total Budget</label>
+              <input type="number" class="form-control" formControlName="totalBudget" placeholder="Total Budget" />
+            </div>
+            <div class="form-group col-md-4"
+              [ngClass]="{'invalid': formSubmitted && myForm.get('utilizedBudget')?.invalid}">
+              <label for="utilizedBudget">Utilized Budget</label>
+              <input type="number" class="form-control" formControlName="utilizedBudget"
+                placeholder="Utilized Budget" />
+            </div>
           </div>
-          <div class="form-group col-md-6">
-            <label for="UtilizedBudget">Utilized Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget"
-              placeholder="Utilized Buget" />
-          </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('attachment')?.invalid}">
             <label for="attachment">Attachment</label>
-            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" multiple />
+            <input type="file" class="form-control" formControlName="attachment" />
           </div>
-          <div class="form-group col-md-4">
-            <label for="date">Purchase Date</label>
-            <input type="date" class="form-control" [(ngModel)]="purchaseDate" name="purchaseDate"
-              (blur)="calculateAge()" />
+          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('remarks')?.invalid}">
+            <label for="remarks">Remarks</label>
+            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
           </div>
-          <div class="form-group col-md-4">
-            <label class="required" for="age">Age</label>
-            <input type="number" class="form-control" [(ngModel)]="age" name="age" placeholder="Age" required
-              [disabled]="ageCalculated" />
-          </div>
-          <div class="form-group col-md-4">
-            <label class="required" for="remarks">Remarks</label>
-            <textarea class="form-control" [(ngModel)]="remarks" name="remarks" rows="1"></textarea>
-          </div>
-          <div class="panel-body">
+          <div class="inline-table">
             <table class="table table-bordered">
               <thead class="text text-primary">
                 <tr>
+                  <th>Name</th>
                   <th>Category</th>
                   <th>Item</th>
-                  <th>Cost Center</th>
                   <th>Quantity</th>
                   <th>Action</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr *ngFor="let row of rows; let i = index">
+              <tbody formArrayName="rows">
+                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i"
+                  [ngClass]="{'invalid': formSubmitted && row.invalid}">
                   <td>
-                    <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{
-                        option.ItemCategory }}</option>
+                    <select formControlName="category" class="form-control"
+                      [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">
+                        {{option.ItemCategory
+                        }}</option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
+                    <select formControlName="item" class="form-control">
                       <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
                       </option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].costCenter" class="form-control" [ngModelOptions]="{standalone: true}">
+                    <select formControlName="costCenter" class="form-control">
                       <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
                       </option>
                     </select>
                   </td>
                   <td>
-                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control"
-                      [ngModelOptions]="{standalone: true}">
+                    <input type="number" formControlName="quantity" class="form-control">
                   </td>
                   <td>
                     <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
@@ -102,9 +96,9 @@
                 </tr>
               </tfoot>
             </table>
-            <button class="btn btn-info" (click)="submit()">Submit</button>
           </div>
         </div>
+        <button class="btn btn-info" type="submit">Submit</button>
       </div>
     </div>
   </div>
