--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,21 @@
           </ion-item>
         </ion-menu-toggle>
 
+        <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
+          <ion-item [routerLink]="menuItem.link" lines="none">
+            <ion-icon slot="start" [name]="menuItem.icon"></ion-icon>
+            <ion-label>{{ menuItem.title }}</ion-label>
+            <ion-icon slot="end" [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
+              (click)="toggleSubmenu(menuItem)"></ion-icon>
+          </ion-item>
+          <ion-list *ngIf="isSubmenuOpen(menuItem)">
+            <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
+              <ion-icon slot="start" [name]="subItem.icon"></ion-icon>
+              <ion-label>{{ subItem.title }}</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-menu-toggle>
+
         <ion-menu-toggle>
           <ion-item routerLink="/procurement">
             <ion-icon name="add-circle-outline" slot="start"></ion-icon>
@@ -71,3 +86,31 @@
   </ion-router-outlet>
   <lib-ng-toast></lib-ng-toast>
 </ion-app>
+
+
+<!-- app.component.html -->
+<!-- <ion-app>
+  <ion-menu menuId="main-menu" content-id="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
+          <ion-item [routerLink]="menuItem.link" lines="none">
+            <ion-label>{{ menuItem.title }}</ion-label>
+            <ion-toggle slot="end" [(ngModel)]="menuItem.enabled"></ion-toggle>
+          </ion-item>
+          <ion-list *ngIf="menuItem.enabled">
+            <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
+              <ion-label>{{ subItem.title }}</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet></ion-router-outlet>
+</ion-app> -->
