--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,29 +20,19 @@
           <ion-item [routerLink]="menuItem.link" lines="none">
             <ion-icon slot="start" [name]="menuItem.icon"></ion-icon>
             <ion-label>{{ menuItem.title }}</ion-label>
-            <ion-icon slot="end" [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
-              (click)="toggleSubmenu(menuItem)"></ion-icon>
+            <ion-icon
+              slot="end"
+              [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
+              (click)="toggleSubmenu(menuItem)"
+              class="dropdown-icon"
+            ></ion-icon>
           </ion-item>
-          <ion-list *ngIf="isSubmenuOpen(menuItem)">
+          <ion-list [@submenuAnimation]="isSubmenuOpen(menuItem) ? 'expanded' : 'collapsed'" *ngIf="isSubmenuOpen(menuItem)">
             <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
               <ion-icon slot="start" [name]="subItem.icon"></ion-icon>
               <ion-label>{{ subItem.title }}</ion-label>
             </ion-item>
           </ion-list>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="/procurement">
-            <ion-icon name="add-circle-outline" slot="start"></ion-icon>
-            <ion-label>Procurement Form</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="/procurementview">
-            <ion-icon name="person-outline" slot="start"></ion-icon>
-            <ion-label>Procurement List</ion-label>
-          </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
@@ -81,16 +71,33 @@
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
+    <ion-footer>
+      <ion-toolbar>
+        <ion-item lines="none" (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked">
+          <ion-icon slot="start" name="person"></ion-icon>
+          <ion-label>User</ion-label>
+        </ion-item>
+        <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
+          <ion-item lines="none" [routerLink]="'/settings'">
+            <ion-icon slot="start" name="settings"></ion-icon>
+            <ion-label>Settings</ion-label>
+          </ion-item>
+          <ion-item lines="none" (click)="logout()">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-toolbar>
+    </ion-footer>
   </ion-menu>
   <ion-router-outlet id="main">
   </ion-router-outlet>
   <lib-ng-toast></lib-ng-toast>
 </ion-app>
 
-
 <!-- app.component.html -->
 <!-- <ion-app>
-  <ion-menu menuId="main-menu" content-id="main">
+  <ion-menu>
     <ion-header>
       <ion-toolbar>
         <ion-title>Menu</ion-title>
@@ -100,17 +107,46 @@
       <ion-list>
         <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
           <ion-item [routerLink]="menuItem.link" lines="none">
+            <ion-icon slot="start" [name]="menuItem.icon"></ion-icon>
             <ion-label>{{ menuItem.title }}</ion-label>
-            <ion-toggle slot="end" [(ngModel)]="menuItem.enabled"></ion-toggle>
+            <ion-icon
+              slot="end"
+              [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
+              (click)="toggleSubmenu(menuItem)"
+              class="dropdown-icon"
+            ></ion-icon>
           </ion-item>
-          <ion-list *ngIf="menuItem.enabled">
+          <ion-list [@submenuAnimation]="isSubmenuOpen(menuItem) ? 'expanded' : 'collapsed'" *ngIf="isSubmenuOpen(menuItem)">
             <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
+              <ion-icon slot="start" [name]="subItem.icon"></ion-icon>
               <ion-label>{{ subItem.title }}</ion-label>
             </ion-item>
           </ion-list>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
+    <ion-footer>
+      <ion-toolbar>
+        <ion-item lines="none" (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked">
+          <ion-icon slot="start" name="person"></ion-icon>
+          <ion-label>User</ion-label>
+        </ion-item>
+        <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
+          <ion-item lines="none" [routerLink]="'/profile'">
+            <ion-icon slot="start" name="person-circle"></ion-icon>
+            <ion-label>Profile</ion-label>
+          </ion-item>
+          <ion-item lines="none" [routerLink]="'/settings'">
+            <ion-icon slot="start" name="settings"></ion-icon>
+            <ion-label>Settings</ion-label>
+          </ion-item>
+          <ion-item lines="none" [routerLink]="'/logout'">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-toolbar>
+    </ion-footer>
   </ion-menu>
   <ion-router-outlet></ion-router-outlet>
 </ion-app> -->
