--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,13 @@
             <ion-label>Analylitcs</ion-label>
           </ion-item>
         </ion-menu-toggle>
+        
+        <ion-menu-toggle>
+          <ion-item routerLink="">
+            <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
+            <ion-label>Analylitcs</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
 
         <ion-menu-toggle>
           <ion-item routerLink="">
