--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,6 @@
 
     <ion-content>
       <ion-list>
-
         <ion-menu-toggle>
           <ion-item routerLink="/home">
             <ion-icon name="home" slot="start"></ion-icon>
@@ -16,36 +15,38 @@
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
-          <ion-item [routerLink]="menuItem.link" lines="none">
-            <ion-icon slot="start" [name]="menuItem.icon"></ion-icon>
-            <ion-label>{{ menuItem.title }}</ion-label>
-            <ion-icon
-              slot="end"
-              [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
-              (click)="toggleSubmenu(menuItem)"
-              class="dropdown-icon"
-            ></ion-icon>
+        <ion-toolbar>
+          <ion-item (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked" button detail="true"
+            detail-icon="caret-forward-outline">
+            <ion-icon name="cart-outline" slot="start"></ion-icon>
+            <ion-label>Procurement</ion-label>
           </ion-item>
-          <ion-list [@submenuAnimation]="isSubmenuOpen(menuItem) ? 'expanded' : 'collapsed'" *ngIf="isSubmenuOpen(menuItem)">
-            <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
-              <ion-icon slot="start" [name]="subItem.icon"></ion-icon>
-              <ion-label>{{ subItem.title }}</ion-label>
+
+          <ion-menu-toggle>
+          <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
+            <ion-item [routerLink]="'/procurement'">
+              <ion-icon slot="start" name="documents-outline"></ion-icon>
+              <ion-label>Request</ion-label>
+            </ion-item>
+          
+
+            <ion-item [routerLink]="'/procurementview'">
+              <ion-icon slot="start" name="file-tray-sharp"></ion-icon>
+              <ion-label>List</ion-label>
+            </ion-item>
+
+            <ion-item [routerLink]="'/approvallist'">
+              <ion-icon slot="start" name="navigate-circle-outline"></ion-icon>
+              <ion-label>Approval</ion-label>
             </ion-item>
           </ion-list>
-        </ion-menu-toggle>
+          </ion-menu-toggle>
+        </ion-toolbar>
 
         <ion-menu-toggle>
           <ion-item routerLink="">
             <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
-            <ion-label>Analylitcs</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-        
-        <ion-menu-toggle>
-          <ion-item routerLink="">
-            <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
-            <ion-label>Analylitcs</ion-label>
+            <ion-label>Analytics</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
@@ -58,102 +59,23 @@
 
         <ion-menu-toggle>
           <ion-item routerLink="">
-            <ion-icon name="settings-outline" slot="start"></ion-icon>
-            <ion-label>Settings</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="">
             <ion-icon name="help-circle-outline" slot="start"></ion-icon>
             <ion-label>Help</ion-label>
           </ion-item>
         </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item (click)="logout()">
-            <ion-icon name="log-out-outline" slot="start"></ion-icon>
-            <ion-label>Logout</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
       </ion-list>
     </ion-content>
-    <ion-footer>
+
+    <ion-footer class="footer">
       <ion-toolbar>
-        <ion-item lines="none" (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked">
-          <ion-icon slot="start" name="person"></ion-icon>
-          <ion-label>User</ion-label>
+        <ion-item (click)="logout()">
+          <ion-icon name="log-out" slot="start" color="danger"></ion-icon>
+          <ion-label>Logout</ion-label>
         </ion-item>
-        <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
-          <ion-item lines="none" [routerLink]="'/settings'">
-            <ion-icon slot="start" name="settings"></ion-icon>
-            <ion-label>Settings</ion-label>
-          </ion-item>
-          <ion-item lines="none" (click)="logout()">
-            <ion-icon slot="start" name="log-out"></ion-icon>
-            <ion-label>Logout</ion-label>
-          </ion-item>
-        </ion-list>
       </ion-toolbar>
     </ion-footer>
+
   </ion-menu>
-  <ion-router-outlet id="main">
-  </ion-router-outlet>
+  <ion-router-outlet id="main"> </ion-router-outlet>
   <lib-ng-toast></lib-ng-toast>
 </ion-app>
-
-<!-- app.component.html -->
-<!-- <ion-app>
-  <ion-menu>
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
-          <ion-item [routerLink]="menuItem.link" lines="none">
-            <ion-icon slot="start" [name]="menuItem.icon"></ion-icon>
-            <ion-label>{{ menuItem.title }}</ion-label>
-            <ion-icon
-              slot="end"
-              [name]="isSubmenuOpen(menuItem) ? 'caret-up-outline' : 'caret-down-outline'"
-              (click)="toggleSubmenu(menuItem)"
-              class="dropdown-icon"
-            ></ion-icon>
-          </ion-item>
-          <ion-list [@submenuAnimation]="isSubmenuOpen(menuItem) ? 'expanded' : 'collapsed'" *ngIf="isSubmenuOpen(menuItem)">
-            <ion-item [routerLink]="subItem.link" *ngFor="let subItem of menuItem.submenuItems">
-              <ion-icon slot="start" [name]="subItem.icon"></ion-icon>
-              <ion-label>{{ subItem.title }}</ion-label>
-            </ion-item>
-          </ion-list>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-content>
-    <ion-footer>
-      <ion-toolbar>
-        <ion-item lines="none" (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked">
-          <ion-icon slot="start" name="person"></ion-icon>
-          <ion-label>User</ion-label>
-        </ion-item>
-        <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
-          <ion-item lines="none" [routerLink]="'/profile'">
-            <ion-icon slot="start" name="person-circle"></ion-icon>
-            <ion-label>Profile</ion-label>
-          </ion-item>
-          <ion-item lines="none" [routerLink]="'/settings'">
-            <ion-icon slot="start" name="settings"></ion-icon>
-            <ion-label>Settings</ion-label>
-          </ion-item>
-          <ion-item lines="none" [routerLink]="'/logout'">
-            <ion-icon slot="start" name="log-out"></ion-icon>
-            <ion-label>Logout</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-toolbar>
-    </ion-footer>
-  </ion-menu>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app> -->
